--- a/app_documento/Gemfile
+++ b/app_documento/Gemfile
@@ -43,4 +43,8 @@ gem 'bcrypt-ruby', '~> 3.0.0'
 # To use debugger
 # gem 'debugger'
 
+#Gema para autenticacion
 gem 'devise'
+
+#Gema para localidad
+gem 'i18n'
