--- a/app_documento/Gemfile
+++ b/app_documento/Gemfile
@@ -71,5 +71,7 @@ gem "paperclip", "~> 3.0"
 
 #gema para renderizar pdfs
 gem 'wicked_pdf'
-#jquery validations
-#gem 'jquery-validation-rails'
+
+#gemas para manejar archivos de ruby en js
+gem 'rabl'
+gem 'gon'
