Empezando a hacer alertas

--- a/app_documento/Gemfile
+++ b/app_documento/Gemfile
@@ -76,4 +76,7 @@ gem 'wicked_pdf'
 gem 'rabl'
 gem 'gon'
 
+#Gema para tareas asincronas con cron
+gem 'whenever', :require => false
+
 gem 'paper_trail'
