--- a/app_documento/Gemfile
+++ b/app_documento/Gemfile
@@ -22,6 +22,7 @@ group :assets do
   gem 'twitter-bootstrap-rails'
   gem "less-rails"
   gem 'formtastic-bootstrap'
+  gem 'jquery-ui-bootstrap-rails'
 end
 
 gem 'jquery-rails'
