Agregados permisos de usuarios transcriptores y responsables Gema cancan instalada Falta configurar gema cancan y permisos de los nuevos usuarios

--- a/app_documento/Gemfile
+++ b/app_documento/Gemfile
@@ -87,3 +87,7 @@ gem 'whenever', :require => false
 
 gem "nested_form"
 gem "cocoon"
+
+#Gema para el manejo de autenticaciond e usuarios
+gem "cancan"
+
