--- a/app_documento/Gemfile
+++ b/app_documento/Gemfile
@@ -5,6 +5,7 @@ gem 'rails', '3.2.9'
 # Bundle edge Rails instead:
 # gem 'rails', :git => 'git://github.com/rails/rails.git'
 
+gem 'pg'
 gem 'sqlite3'
 
 
@@ -87,3 +88,6 @@ gem 'whenever', :require => false
 
 gem "nested_form"
 gem "cocoon"
+
+# Graficos para estadisticas
+gem 'graphael-rails'
