--- a/app_documento/config/database.yml
+++ b/app_documento/config/database.yml
@@ -4,25 +4,32 @@
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
 development:
-  adapter: sqlite3
-  database: db/development.sqlite3
-  pool: 5
+  adapter: postgresql
+  database: myapp_development
+  host: localhost
+  user: juan
+  password: 12345678
   timeout: 5000
+  pool: 5
   encoding: utf8
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  adapter: sqlite3
-  database: db/test.sqlite3
+  adapter: postgresql
+  database: myapp_test
+  user: juan
+  password: 12345678
   pool: 5
   timeout: 5000
   encoding: utf8
 
 production:
   adapter: sqlite3
-  database: db/production.sqlite3
+  database: myapp_test
+  user: juan
+  password: 12345678
   pool: 5
   timeout: 5000
   encoding: utf8
